# aedat4-to-bag

./: .gitignore  README.md  convert.py
config/: params.yaml
triggers/: CMakeLists.txt  package.xml
triggers/msg/: Trigger.msg
